--- a/app/src/main/res/layout/nav_bottom.xml
+++ b/app/src/main/res/layout/nav_bottom.xml
@@ -38,8 +38,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:iconHeight="@dimen/nav_bottom_icon_size"
-            app:iconNormal="@mipmap/classify"
-            app:iconSelected="@mipmap/classify"
+            app:iconNormal="@drawable/ic_classify"
+            app:iconSelected="@drawable/ic_classify_selected"
             app:iconWidth="@dimen/nav_bottom_icon_size"
             app:itemText="@string/nav_bottom_2"
             app:itemTextSize="@dimen/nav_bottom_font_size"
@@ -52,8 +52,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:iconHeight="@dimen/nav_bottom_icon_size"
-            app:iconNormal="@mipmap/circle"
-            app:iconSelected="@mipmap/circle"
+            app:iconNormal="@drawable/ic_circle"
+            app:iconSelected="@drawable/ic_circle_selected"
             app:iconWidth="@dimen/nav_bottom_icon_size"
             app:itemText="@string/nav_bottom_3"
             app:itemTextSize="@dimen/nav_bottom_font_size"
