--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    tools:context=".ui.main_home.HomeFragment">
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/nav_top"
-        layout="@layout/nav_top"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:elevation="0dp">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/home_tab"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        app:tabIndicatorColor="?attr/colorPrimary"
-        app:tabMode="scrollable"
-        android:background="@android:color/white"
-        app:tabSelectedTextColor="?attr/colorPrimary"
-        app:tabTextColor="@android:color/black" />
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:contentInsetStart="0dp">
+
+            <include
+                android:id="@+id/nav_top"
+                layout="@layout/nav_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_behavior="" />
+        </android.support.v7.widget.Toolbar>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/home_tab"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@android:color/white"
+            app:tabIndicatorColor="?attr/colorPrimary"
+            app:tabMode="scrollable"
+            app:tabSelectedTextColor="?attr/colorPrimary"
+            app:tabTextColor="@android:color/black" />
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/home_vp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
