--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -3,49 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_margin="8dp"
-        android:background="@drawable/search_background"
-        android:gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="30dp">
-        <ImageView
-            android:layout_margin="@dimen/dp10"
-            android:src="@mipmap/search"
-            android:layout_width="20dp"
-            android:layout_height="20dp" />
-        <TextView
-            android:text="@string/search_hint"
-            android:textColor="#b2b2b2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+
+    <include layout="@layout/layout_goods_search"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:background="@color/color_107"
+        android:orientation="horizontal"
         android:weightSum="4">
 
         <android.support.v7.widget.RecyclerView
-            android:background="@color/color_109"
             android:id="@+id/rv_sort_left"
             android:layout_width="80dp"
-            android:overScrollMode="never"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/color_109"
+            android:overScrollMode="never" />
+
         <View
             android:layout_width="0.5dp"
             android:layout_height="match_parent"
-            android:background="@color/color_107"/>
+            android:background="@color/color_107" />
 
         <android.support.v7.widget.RecyclerView
-            android:background="@color/color_109"
             android:id="@+id/rv_sort_right"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:overScrollMode="never"
             android:layout_marginLeft="12sp"
-            android:layout_marginRight="12sp" />
+            android:layout_marginRight="12sp"
+            android:background="@color/color_109"
+            android:overScrollMode="never" />
     </LinearLayout>
 </LinearLayout>
