--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -66,6 +66,7 @@
                             android:textColor="@android:color/white" />
 
                         <ImageView
+                            android:id="@+id/mine_iv_devide"
                             android:layout_width="1dp"
                             android:layout_height="@dimen/dp20"
                             android:background="@android:color/white" />
