--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -88,6 +88,7 @@
                 android:gravity="center">
 
                 <LinearLayout
+                    android:id="@+id/mine_ll_unpay"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -108,6 +109,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/mine_ll_unreceive"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -128,6 +130,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/mine_ll_evaluate"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -148,6 +151,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/mine_ll_all"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
