--- a/app/src/main/res/layout/dialog_comfirm.xml
+++ b/app/src/main/res/layout/dialog_comfirm.xml
@@ -7,6 +7,9 @@
     <TextView
         android:textSize="18sp"
         android:text="确定"
+        android:background="#00ff00"
+        android:paddingLeft="5dp"
+        android:textColor="#000000"
         android:gravity="center|left"
         android:id="@+id/dialog_tv_title"
         android:layout_width="match_parent"
@@ -28,6 +31,7 @@
             android:id="@+id/dialog_tv_left"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
+            android:textColor="#999999"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="取消"
