--- a/app/src/main/res/layout/dialog_singlecheck.xml
+++ b/app/src/main/res/layout/dialog_singlecheck.xml
@@ -24,5 +24,6 @@
     <ListView
         android:id="@+id/dialog_single_lv"
         android:layout_width="match_parent"
+        android:scrollbars="none"
         android:layout_height="wrap_content" />
 </LinearLayout>
