--- a/app/src/main/res/layout/activity_my_collection.xml
+++ b/app/src/main/res/layout/activity_my_collection.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".activity.ManageAddressActivity">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
     <include layout="@layout/layout_titlebar"/>
     <View
         android:background="#cccccc"
         android:layout_width="match_parent"
         android:layout_height="1px"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/manage_address_rv"
-        android:background="#f3f4f5"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/collect_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/collect_vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
