--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -225,6 +225,44 @@
                         android:src="@mipmap/ic_right_arrow" />
                 </LinearLayout>
 
+
+                <!--购物车-->
+                <!--分割线-->
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/divide_line_color" />
+
+                <LinearLayout
+                    android:id="@+id/ll_my_cart"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/dp20"
+                        android:layout_height="@dimen/dp20"
+                        android:layout_margin="@dimen/dp10"
+                        android:src="@drawable/ic_shopping_trolley_unselected" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="@string/my_cart" />
+
+                    <ImageView
+                        android:layout_width="@dimen/dp20"
+                        android:layout_height="@dimen/dp20"
+                        android:layout_margin="5dp"
+                        android:src="@mipmap/ic_right_arrow" />
+                </LinearLayout>
+
                 <!--我的评价-->
                 <!--分割线-->
                 <ImageView
