--- a/app/src/main/res/layout/item_shopcart.xml
+++ b/app/src/main/res/layout/item_shopcart.xml
@@ -1,76 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp"
     android:layout_margin="5dp"
     android:background="@drawable/shape_order_item"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <CheckBox
         android:id="@+id/item_shopcart_cb"
+        android:background="@drawable/checkbox_style"
+        android:button="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
     <ImageView
-        android:layout_marginStart="5dp"
-        android:scaleType="centerCrop"
         android:id="@+id/item_shopcart_iv"
         android:layout_width="100dp"
-        android:layout_height="100dp" />
-    <LinearLayout
+        android:layout_height="100dp"
         android:layout_marginStart="5dp"
-        android:orientation="vertical"
+        android:scaleType="centerCrop" />
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/item_shopcart_goods_name"
             android:layout_width="match_parent"
-            android:maxLines="2"
-            android:textColor="#000000"
+            android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:layout_height="wrap_content" />
+            android:maxLines="2"
+            android:textColor="#000000" />
+
         <LinearLayout
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
-                android:text="单价："
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="单价："
+                android:textColor="#757575" />
+
             <TextView
                 android:id="@+id/item_shopcart_price"
+                android:layout_width="179dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="#ff0000"
                 android:text="$22.9"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content" />
+                android:textColor="#ff0000" />
+
             <TextView
+                android:textColor="#757575"
                 android:id="@+id/item_shopcart_np"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:gravity="center_vertical|end"
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal">
+
             <TextView
-                android:text="小计："
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="小计："
+                android:textColor="#757575" />
+
             <TextView
                 android:id="@+id/item_shopcart_count"
-                android:text="22.9"
-                android:textColor="#ff0000"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="22.9"
+                android:textColor="#ff0000" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
